# FunctionsAP

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
FunctionsAP/: __init__.py  join_files.py
FunctionsAP/Captura/: join_files.py
FunctionsAP/Columns/: funcion.py
FunctionsAP/graph/: __init__.py  barplot_line_gruped_stacked.py
FunctionsAP/statistics/: FieldLayout.py  __init__.py  ap_rcbd.py  diseño_rcbd.py  modific_outlier.py
FunctionsAP/utilities/: __init__.py  columns_add.py  data_base_genetic.py  eliminar_valor_columna1.py  handle_missing_data.py  join_files.py  procesar_valores.py  reemplazar_valores.py
